k8s/prod/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpin-frontend
  namespace: helpin
  labels:
    app: helpin-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helpin-frontend
  template:
    metadata:
      labels:
        app: helpin-frontend
        env: prod
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: helpin-frontend
          image: ghcr.io/helpin-ai/helpin/frontend:prod-latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helpin-frontend-svc
  namespace: helpin
  labels:
    app: helpin-frontend
spec:
  ports:
    - name: helpin-frontend-port
      port: 80
      targetPort: 80
  selector:
    app: helpin-frontend
  type: ClusterIP
