k8s/prod/ingress-api-helpin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helpin-api-cloudflare
  namespace: helpin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: pp-nginx
  rules:
  - host: api.helpin.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpin-server-svc
            port:
              number: 8080
